# MathAssistant

./: .coverage  .gitignore  LICENSE  README.md  main.py  pyproject.toml
extensions/mylab/source/: build-list.json  build-phet-sims.ps1
src/MathAssistant/core/: equation_solver.py  math_engine.py
src/MathAssistant/ui/: equation_solver_ui.py  main_window.py  prime_tools_ui.py  styles.py  vector_window.py
src/MathAssistant/utils/: system_tools.py
tests/: command.txt  conftest.py  test_equation_solver.py
tests/accessibility/: test_wcag.py
tests/unit/: test_cache.py  test_colors.py  test_equation_solver.py  test_main_window.py  test_math_engine.py  test_palette_factory.py  test_styles.py  test_system_tools.py  test_theme_manager.py
