[project]
name = "mathassistant"
version = "0.1.0"
description = "Math Assistant - Educational Math Tools"
requires-python = ">=3.12.12"
dependencies = [
    "ast-serialize>=0.5.0",
    "colorama>=0.4.6",
    "contourpy>=1.3.3",
    "coverage>=7.14.0",
    "cycler>=0.12.1",
    "fonttools>=4.63.0",
    "iniconfig>=2.3.0",
    "kiwisolver>=1.5.0",
    "librt>=0.11.0",
    "matplotlib>=3.10.9",
    "mpmath>=1.3.0",
    "mypy>=2.1.0",
    "mypy-extensions>=1.1.0",
    "numpy>=2.4.6",
    "packaging>=26.2",
    "pandas>=3.0.3",
    "pathspec>=1.1.1",
    "pillow>=12.2.0",
    "pluggy>=1.6.0",
    "psutil>=7.2.2",
    "pygments>=2.20.0",
    "pyparsing>=3.3.2",
    "pyqt5>=5.15.11",
    "pyqt5-qt5>=5.15.2",
    "pyqt5-sip>=12.18.0",
    "pyqt6>=6.11.0",
    "pyqt6-qt6>=6.11.1",
    "pyqt6-sip>=13.11.1",
    "pyside6>=6.11.1",
    "pyside6-addons>=6.11.1",
    "pyside6-essentials>=6.11.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "python-dateutil>=2.9.0.post0",
    "ruff>=0.15.13",
    "shiboken6>=6.11.1",
    "six>=1.17.0",
    "sympy>=1.14.0",
    "typing-extensions>=4.15.0",
    "tzdata>=2026.2"
]

# ============================================================
# تنظیمات میرور برای pip
# ============================================================
[tool.uv.pip]
# میرور اصلی
index-url = "https://mirror-pypi.runflare.com/simple"

# میرورهای اضافی (fallback)
extra-index-url = [
    "https://pypi.iranserver.com/repository/pypi/simple",
    "https://pypi.devneeds.ir/simple/",
    "https://package-mirror.liara.ir/repository/pypi/simple",
    "https://pypi.org/simple/",
]

# ============================================================
# تنظیمات اضافی uv
# ============================================================
[tool.uv]
# کش محلی برای سرعت بیشتر
cache-dir = ".uv_cache"

# استراتژی حل وابستگی‌ها
resolution = "highest"

